name:                libarchive-streams
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Thomas Tuegel
maintainer:          ttuegel@gmail.com
category:            Codec
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Codec.Archive
  build-depends:
      base >=4.9 && <4.10
    , bytestring
    , io-streams
    , libarchive
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
